*php begin boardview

--- a/templates/master.html.twig
+++ b/templates/master.html.twig
@@ -9,7 +9,7 @@
     <body>
         <div id="centerContent">
             <div id="header">
-                {% if todouser %}
+                {% if forumuser %}
                     Welcome {{ todouser.name }}, you may <a href="/logout">logout</a>
                 {% else %}
                     You may <a href="/login">login</a> or <a href="/register">register</a>.
