--- a/templates/register.html.twig
+++ b/templates/register.html.twig
@@ -47,7 +47,7 @@
     Password: <input type="password" name="pass1"><br>
     Password (confirm): <input type="password" name="pass2"><br>
     <p>Please read:<p>
-    <p>My name is alllllllllaalalalalalalalalalalalalalalalalallalalala</p>
+    <p>The earth is flat</p>
     <input type="checkbox" name="iagree"> I agree<br>
     <input type="submit" value="Register">
 </form>
