--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -8,7 +8,7 @@
 {% endif %}
 
 <form method="post">
-    Email <input type="email" name="email"><br>
+    Username <input type="text" name="username"><br>
     Password <input type="password" name="pass"><br>
     <input type="submit" value="Login">
 </form>
