--- a/templates/register.html.twig
+++ b/templates/register.html.twig
@@ -41,9 +41,7 @@
 
 <form method="post" id="regform">
     Username: <input type="text" name="username" value="{{v.username}}">
-    <span id="usernameInUse">Username already registered</span><br>
-    Email: <input type="email" name="email" value="{{v.email}}">
-    <span id="emailInUse">Email already registered</span><br>
+    <!--<span id="usernameInUse">Username already registered</span>--><br>
     Password: <input type="password" name="pass1"><br>
     Password (confirm): <input type="password" name="pass2"><br>
     <p>Please read:<p>
