*project weekend update, new page templates, partial php code

--- a/templates/board_events.html.twig
+++ b/templates/board_events.html.twig
@@ -1,1 +1,14 @@
-{# empty Twig template #}
+{% extends "master.html.twig" %}
+
+{% block title %}Montreal Event Threads{% endblock title %}
+
+{% block content %}
+    <h1>Montreal Events</h1>
+    <section>
+        <a href="#">Tonight at Casa Del Popolo</a>
+
+        <a href="#">Anyone go see Run The Jewels??</a>
+
+        <a href="#">Looking for bands to perform album release event</a>
+    </section>
+{% endblock content %}
