--- a/templates/board_geartech.html.twig
+++ b/templates/board_geartech.html.twig
@@ -1,1 +1,14 @@
-{# empty Twig template #}
+{% extends "master.html.twig" %}
+
+{% block title %}Gear/Tech Threads{% endblock title %}
+
+{% block content %}
+    <h1>Gear and Tech Discussion</h1>
+    <section>
+        <a href="#">MS-20 module!</a>
+
+        <a href="#">The age-old debate: analog vs digital</a>
+
+        <a href="#">How do I get my mix-down just right?</a>
+    </section>
+{% endblock content %}
