--- a/templates/board_musictalk.html.twig
+++ b/templates/board_musictalk.html.twig
@@ -1,1 +1,14 @@
-{# empty Twig template #}
+{% extends "master.html.twig" %}
+
+{% block title %}Music Talk Threads{% endblock title %}
+
+{% block content %}
+    <h1>Music Talk</h1>
+    <section>
+        <a href="#">Hip-hop thread</a>
+
+        <a href="#">Noise/Industrial/Experimental music thread</a>
+
+        <a href="#">The "punk's not dead" thread!</a>
+    </section>
+{% endblock content %}
