--- a/templates/board_view.html.twig
+++ b/templates/board_view.html.twig
@@ -5,14 +5,14 @@
 {% block content %}
 
 <section>
-        <a href="#">Music Talk - Discuss your favorite sounds</a>
-        <p>You'll find hip hop, techno, rock, industrial/noise and more in here</p>
+        <a href="/board/musictalk">Music Talk - Discuss your favorite sounds</a>
+        <p>Discuss your favorite music - hip hop, techno, rock, industrial/noise and more</p>
 
-        <a href="#">Gear/Technology</a>
-        <p>You'll find hip hop, techno, rock, industrial/noise and more in here</p>
+        <a href="/board/geartech">Gear/Technology</a>
+        <p>Everything from guitars, pedals, amps, synths, electronics, mixing and mastering techniques</p>
 
-        <a href="#">Events - Past, present, and future</a>
-        <p>You'll find hip hop, techno, rock, industrial/noise and more in here</p>
+        <a href="/board/events">Events - Past, present, and future</a>
+        <p>Let people know of any upcoming events that might be of interest</p>
 </section>
     
 {% endblock content %}
