*project back from long weekend, slight mods

--- a/templates/board_events.html.twig
+++ b/templates/board_events.html.twig
@@ -5,10 +5,10 @@
 {% block content %}
     <h1>Montreal Events</h1>
     <section>
-        <a href="#">Tonight at Casa Del Popolo</a>
+        <a href="#">Tonight at Casa Del Popolo</a><br><br>
 
-        <a href="#">Anyone go see Run The Jewels??</a>
+        <a href="#">Anyone go see Run The Jewels??</a><br><br>
 
-        <a href="#">Looking for bands to perform album release event</a>
+        <a href="#">Looking for bands to perform album release event</a><br><br>
     </section>
 {% endblock content %}
