--- a/templates/board_geartech.html.twig
+++ b/templates/board_geartech.html.twig
@@ -5,10 +5,10 @@
 {% block content %}
     <h1>Gear and Tech Discussion</h1>
     <section>
-        <a href="#">MS-20 module!</a>
+        <a href="#">MS-20 module!</a><br><br>
 
-        <a href="#">The age-old debate: analog vs digital</a>
+        <a href="#">The age-old debate: analog vs digital</a><br><br>
 
-        <a href="#">How do I get my mix-down just right?</a>
+        <a href="#">How do I get my mix-down just right?</a><br><br>
     </section>
 {% endblock content %}
