--- a/templates/board_musictalk.html.twig
+++ b/templates/board_musictalk.html.twig
@@ -5,10 +5,10 @@
 {% block content %}
     <h1>Music Talk</h1>
     <section>
-        <a href="#">Hip-hop thread</a>
+        <a href="#">Hip-hop thread</a><br><br>
 
-        <a href="#">Noise/Industrial/Experimental music thread</a>
+        <a href="#">Noise/Industrial/Experimental music thread</a><br><br>
 
-        <a href="#">The "punk's not dead" thread!</a>
+        <a href="#">The "punk's not dead" thread!</a><br><br>
     </section>
 {% endblock content %}
