--- a/templates/master.html.twig
+++ b/templates/master.html.twig
@@ -21,7 +21,7 @@
             </div>
             <div id="footer">
                 {% block footer %}
-                    &copy; Copyright 2011 by <a href="http://domain.invalid/">you</a>.
+                    &copy; Copyright 9999 by <a href="http://domain.invalid/">me</a>.
                 {% endblock %}
             </div>
         </div>
