--- a/templates/register.html.twig
+++ b/templates/register.html.twig
@@ -5,7 +5,7 @@
 {% block headExtra %}
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script>
+{#<script>
     $(document).ready(function() {
         $("#emailInUse").hide();
         $("input[name=email]").keyup(function() {
@@ -25,7 +25,7 @@
             });
         });
     });
-</script>
+</script>#}
 
 {% endblock headExtra %}
 
