--- a/templates/new_thread.html.twig
+++ b/templates/new_thread.html.twig
@@ -16,6 +16,6 @@
     <form method='post'>
         Topic: <input type='text' name='title'><br>
         <textarea name='body'>Enter body here...</textarea><br>
-        <input type='submit' value='Submit'>
+        <input type='submit' value='Create new thread'>
     </form>
 {% endblock content %}
