--- a/templates/new_thread_success.html.twig
+++ b/templates/new_thread_success.html.twig
@@ -3,5 +3,5 @@
 {% block title %}New Thread Successful{% endblock title %}
 
 {% block content %}
-    <p>Post successful, view it <a>here</a>.</p>
+    <p>Post successful, view it <a href="/thread/{{threadId}}">here</a>.</p>
 {% endblock content %}
