*project posting moving ahead, add reply

--- a/templates/master.html.twig
+++ b/templates/master.html.twig
@@ -14,7 +14,7 @@
                 {% else %}
                     You may <a href="/login">login</a> or <a href="/register">register</a>.
                 {% endif %}
-                <p>Return to <a href="/board">board directory</a><p>
+                <p>Return to <a href="/">board directory</a><p>
             </div>    
             <div id="content">
                 {% block content %}{% endblock %}
