--- a/templates/login_success.html.twig
+++ b/templates/login_success.html.twig
@@ -1,4 +1,4 @@
 {% block content %}
 <p>You've logged in successfully.
-    <a href="/board">Click to continue to the website</a></p>
+    <a href="/">Click to continue to the website</a></p>
 {% endblock content %}
