--- a/templates/thread_new.html.twig
+++ b/templates/thread_new.html.twig
@@ -12,7 +12,7 @@
         </ul>            
     {% endif %} 
 
-    <h1>New Thread</h1>
+    <h1>New thread in {{ board.title }}</h1>
     <form method='post'>
         Topic: <input type='text' name='title'><br>
         <textarea name='body'>Enter body here...</textarea><br>
