*project reply and datetime working!! :)

--- a/templates/thread_new.html.twig
+++ b/templates/thread_new.html.twig
@@ -15,7 +15,7 @@
     <h1>New thread in {{ board.title }}</h1>
     <form method='post'>
         Topic: <input type='text' name='title'><br>
-        <textarea name='body'>Enter body here...</textarea><br>
+        <textarea name='body' placeholder="Enter body here..."></textarea><br>
         <input type='submit' value='Create new thread'>
     </form>
 {% endblock content %}
