--- a/templates/thread_view.html.twig
+++ b/templates/thread_view.html.twig
@@ -15,7 +15,7 @@
     </div>
     {% if user %}
     <form class="replyForm" method="post">
-        <textarea name="body"></textarea><br>
+        <textarea name="body" placeholder="Enter reply here..."></textarea><br>
         <input type="submit" value="Reply">
     </form>
     {% endif %}
