--- a/templates/thread_view.html.twig
+++ b/templates/thread_view.html.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
     
-    <h1>{{thread.title}}</h1>
+    <h1 class="title is-1">{{thread.title}}</h1>
     
     <div class="postListContainer">
         {% for p in postList %}
