--- a/templates/board_list.html.twig
+++ b/templates/board_list.html.twig
@@ -5,7 +5,7 @@
 {% block content %}
 
 <section>
-    <p>Boards:</p>
+    <h1 class="title is-1">Boards</h1>
     {% for board in boardList %}
         <a href="/board/{{board.boardId}}">{{board.title}}</a><br>
     {% endfor %}
