*project complete, CSS complete, ppt/DB included

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -1,3 +1,13 @@
+body {
+	display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
+
 nav form {
 	display: flex;
+}
+
+section {
+	flex: 1;
 }
