--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -3,13 +3,29 @@
 {% block title %}Log In{% endblock title %}
 
 {% block content %}
-{% if error %}
-    <p class="errorList">Login failed, try again</p>
-{% endif %}
+    {% if error %}
+        <p class="errorList">Login failed, try again</p>
+    {% endif %}
 
-<form method="post">
-    Username <input type="text" name="username"><br>
-    Password <input type="password" name="pass"><br>
-    <input type="submit" value="Login">
-</form>
+    <div class="container">
+        <div class="columns">
+            <div class="column is-one-third">
+                <form method="post">
+                    <div class="field">
+                        <label class="label">Username</label>
+                        <p class="control">
+                            <input class="input" type="text" name="username">
+                        </p>
+                    </div>
+                    <div class="field">
+                        <label class="label">Password</label>
+                        <p class="control">
+                            <input class="input" type="password" name="pass">
+                        </p>
+                    </div>
+                    <input class="button" type="submit" value="Login">
+                </form>
+            </div>
+        </div>
+    </div>
 {% endblock content %}
