--- a/templates/register.html.twig
+++ b/templates/register.html.twig
@@ -2,52 +2,51 @@
 
 {% block title %}User registration{% endblock title %}
 
-{% block headExtra %}
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-{#<script>
-    $(document).ready(function() {
-        $("#emailInUse").hide();
-        $("input[name=email]").keyup(function() {
-            var email = $(this).val();
-            //console.log("Keyup: " + email);
-            if (email === "") {
-                $("#emailInUse").hide();
-                return;
-            }
-            $.get("/ajax/emailused/" + email, function(result) {
-                result = eval(result);
-               if (result) {
-                   $("#emailInUse").show();
-               } else {
-                   $("#emailInUse").hide();
-               }
-            });
-        });
-    });
-</script>#}
-
-{% endblock headExtra %}
-
 {% block content %}
 
-{% if errorList %}
-    <ul class="errorList">
-        {% for error in errorList %}
-            <li>{{ error }}</li>
-        {% endfor %}
-    </ul>            
-{% endif %}    
+    {% if errorList %}
+        <ul class="errorList">
+            {% for error in errorList %}
+                <li>{{ error }}</li>
+                {% endfor %}
+        </ul>            
+    {% endif %}    
+    <div class="container">
+        <div class="columns">
+            <div class="column is-one-third">
+                <form method="post" id="regform">
+                    <div class="field">
+                        <label class="label">Username</label>
+                        <p class="control">
+                            <input class="input" type="text" name="username" value="{{v.username}}">
+                        </p>
+                    </div>
+                    <div class="field">
+                        <label class="label">Password</label>
+                        <p class="control">
+                            <input class="input" type="password" name="pass1">
+                        </p>
+                    </div>
+                    <div class="field">
+                        <label class="label">Retype password</label>
+                        <p class="control">
+                            <input class="input" type="password" name="pass2">
+                        </p>
+                    </div>
+                    <div class="field">
+                        <p class="title is-12">Please read:<p>
+                        <p>The earth is flat</p>
+                        <label class="checkbox">
+                            <input type="checkbox">
+                            I agree
+                        </label>
+                    </div>
+                    <div class="field">
+                        <input class="button" type="submit" value="Register">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 
-<form method="post" id="regform">
-    Username: <input type="text" name="username" value="{{v.username}}">
-    <!--<span id="usernameInUse">Username already registered</span>--><br>
-    Password: <input type="password" name="pass1"><br>
-    Password (confirm): <input type="password" name="pass2"><br>
-    <p>Please read:<p>
-    <p>The earth is flat</p>
-    <input type="checkbox" name="iagree"> I agree<br>
-    <input type="submit" value="Register">
-</form>
-    
 {% endblock content %}
