--- a/templates/thread_new.html.twig
+++ b/templates/thread_new.html.twig
@@ -8,14 +8,24 @@
         <ul class="errorList">
             {% for error in errorList %}
                 <li>{{ error }}</li>
-                {% endfor %}
+            {% endfor %}
         </ul>            
     {% endif %} 
 
-    <h1>New thread in {{ board.title }}</h1>
+    <h1 class="title is-1">New thread in {{ board.title }}</h1>
     <form method='post'>
-        Topic: <input type='text' name='title'><br>
-        <textarea name='body' placeholder="Enter body here..."></textarea><br>
-        <input type='submit' value='Create new thread'>
+        <div class="field">
+            <label class="label">Topic<label>
+            <p class="control">
+                <input class="input" type='text' name='title' placeholder="Insert topic">
+            </p>
+        </div>
+        <div class="field">
+            <label class="label">Whatchugot?<label>
+            <p class="control">
+                <textarea class="textarea" name='body' placeholder="Enter body here..."></textarea>
+            </p>
+        </div>
+        <input class="button" type='submit' value='Create new thread'>
     </form>
 {% endblock content %}
