--- a/templates/thread_new.html.twig
+++ b/templates/thread_new.html.twig
@@ -15,9 +15,9 @@
     <h1 class="title is-1">New thread in {{ board.title }}</h1>
     <form method='post'>
         <div class="field">
-            <label class="label">Topic<label>
+            <label class="label">Thread Topic<label>
             <p class="control">
-                <input class="input" type='text' name='title' placeholder="Insert topic">
+                <input class="input" type='text' name='title' placeholder="Insert thread topic">
             </p>
         </div>
         <div class="field">
