*project corrected stylesheet path

--- a/templates/master.html.twig
+++ b/templates/master.html.twig
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="http://localhost:8008/styles/bulma.min.css">
-        <link rel="stylesheet" href="http://localhost:8008/styles/custom.css">
+        <link rel="stylesheet" href="/styles/bulma.min.css">
+        <link rel="stylesheet" href="/styles/custom.css">
         <meta charset="UTF-8">
         <title>{% block title %}{% endblock %}</title>
     {% block headExtra %}{% endblock %}
